--- a/vars/groovydoc/overview-summary.html
+++ b/vars/groovydoc/overview-summary.html
@@ -23,7 +23,7 @@
 <html>
 <head>
 <title>Overview</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="keywords" content="Overview">
 <link rel ="stylesheet" type="text/css" href="stylesheet.css" title="Style">
 <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
